# nns.c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODOs.md  annotated.html  annotated_dup.js  classes.html  component_8h.html  component_8h.js  component_8h_source.html  components_8h.html  components_8h.js  components_8h_source.html  config_8h.html  config_8h.js  config_8h_source.html  connection_8h.html  connection_8h.js  connection_8h_source.html  datasheet_8h.html  datasheet_8h.js  datasheet_8h_source.html  deserializer_8h.html  deserializer_8h.js  deserializer_8h_source.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_2a682fd410207af9b03288786c9a9653.html  dir_45b393880de218277c304648e01a1550.html  dir_49822cff457b2f8a83b35629c1114e2e.html  dir_49822cff457b2f8a83b35629c1114e2e.js  dir_4b2d6ec3a00f335d020f890df1b79cfa.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_bc4f3d3130ea46cbb34c9fa0d9c95a03.html  dir_bc4f3d3130ea46cbb34c9fa0d9c95a03.js  dir_bcdf4e7f8b96bd5604cfa9640850d3bd.html  dir_bcdf4e7f8b96bd5604cfa9640850d3bd.js  (+96 more)
.github/workflows/: doxygen-gh-pages.yml
analyzers/: state.py
analyzers/util/: base.py  load.py  plot.py  types.py
examples/: CMakeLists.txt  basic.c  example_1.c  io.c  load.c  mea.c
headers/: config.h  nns.h
headers/device/: component.h  datasheet.h  junction.h  network.h  wire.h
headers/interface/: connection.h  interface.h  mea.h
headers/io/: deserializer.h  serializer.h
headers/stimulator/: mna.h  update.h
headers/util/: components.h  distributions.h  errors.h  linalg.h  measures.h  point.h  tensors.h  wires.h
include/device/: datasheet.h  junction.h  network.h  wire.h
include/util/: distributions.h  tensors.h  wires.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+41 more)
source/util/: tensors.c  wires.c
sources/device/: component.c  datasheet.c  junction.c  network.c  wire.c
sources/interface/: interface.c  mea.c
sources/io/: deserializer.c  serializer.c
sources/stimulator/: mna.c  update.c
sources/util/: components.c  distributions.c  linalg.c  measures.c  point.c  tensors.c  wires.c
tests/: CMakeLists.txt  device_datasheet.c  device_network.c  device_wire.c  interface_interface.c  interface_mea.c  io_de-serializer.c  nns.c  stimulator_mna.c  tests.h  util_components.c  util_distributions.c  util_measures.c
tests/stimulator/: test_mna.c  test_mna.h
tests/util/: test_components.c  test_components.h  test_distributions.c  test_distributions.h  test_linalg.c  test_linalg.h
